Fix spacing of the navigation bar after bootstrap update.

--- a/data/static/css/style.css
+++ b/data/static/css/style.css
@@ -1,6 +1,6 @@
 body {
 	position: relative;
-	padding-top: 50px;
+	padding-top: 55px;
 
 	background-image: linear-gradient(
 		bottom,
@@ -40,7 +40,7 @@ body {
 .container-body {
 	background-color: white;
 
-	padding: 15px;
+	padding: 20px;
 }
 
 .ac {
